feat(ui): add button component
* Support icon
* Support text
* When icon is defined, the text is visually hidden, but it's keep for screen readers

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -16,3 +16,8 @@ body {
 }
 
 @import 'typography';
+
+// Small patch for icon alignment
+[class^="sb-"]::before, [class*=" sb-"]::before {
+  vertical-align: middle;
+}
