feat(layout): add 404 page

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -21,6 +21,11 @@
   font-weight: 100;
 }
 
+.content-title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 a {
   text-decoration: none;
   color: $palette-cyan-600;
