feat(styles): improve scss
Improve scss to only export variables and placeholders in global

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,13 +1,13 @@
 .h1-size {
-  font-size: 3.8rem;
+  @extend %h1-size;
 }
 
 .h2-size {
-  font-size: 3.2rem;
+  @extend %h2-size;
 }
 
 .h3-size {
-  font-size: 2.8rem;
+  @extend %h3-size;
 }
 
 .main-title {
