--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -17,8 +17,10 @@ body {
   }
 }
 
+@import "spaces";
 @import "placeholders";
 @import 'typography';
+@import 'list-images';
 
 // Small patch for icon alignment
 [class^="sb-"]::before, [class*=" sb-"]::before {
