--- a/src/assets/scss/_placeholders.scss
+++ b/src/assets/scss/_placeholders.scss
@@ -9,3 +9,12 @@
 %h3-size {
   font-size: 2.8rem;
 }
+
+%secondary-title {
+  border-bottom: 1px solid $palette-cyan-800;
+  padding-top: 40px;
+  margin-bottom: 20px;
+  @extend %h1-size;
+  font-weight: 100;
+  line-height: 1.5;
+}
